--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -84,11 +84,15 @@
     </string-array>
 
     <string-array name="tb_pref_window_size_list_values">
-        <item>standard</item>
-        <item>large</item>
-        <item>fullscreen</item>
         <item>half_left</item>
         <item>half_right</item>
+        <item>1_3_left</item>
+        <item>2_3_right</item>
+        <item>2_3_left</item>
+        <item>1_3_right</item>
+        <item>fullscreen</item>
+        <item>standard</item>
+        <item>large</item>
         <item>phone_size</item>
     </string-array>
 
